--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <h4>PHARREL WILLIAMS</h4> 
+          <h4>PHARREL WILLIAMS</h4>
 
           <!-- Level 2 'HAPPY' Header -->
           <h2>HAPPY</h2>
@@ -25,8 +25,10 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>| FROM DESPICABLE ME...</h3>
 
         <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
 
