--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
         <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY...</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
+        <h3>PUBLISHED BY...</h3>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
