--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img src="" alt="Columbia logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
         <span>COLUMBIARECORDS.COM</span>
@@ -47,6 +48,7 @@
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="" alt="Sony logo">
 
       </div>
     </div>
