automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
-        <h3>WRITTEN BY...</h3>
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
-        <h3>PUBLISHED BY...</h3>
+        <h3>UBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP)</h3>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <span>PHARRELLWILLIAMS.COM</span>
