--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <h3>UBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP)</h3>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-        <span>PHARRELLWILLIAMS.COM</span>
+        <p><span>PHARRELLWILLIAMS.COM</span></p>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         <img src="../images/columbia-logo.png" alt="Columbia logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <span>COLUMBIARECORDS.COM</span>
+        <p><span>COLUMBIARECORDS.COM</span></p>
 
         <br>
 
