--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
-        <p><progress value="0" max="100">0%</progress>UBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP)</p>
+        <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP)</p>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <p><span>PHARRELLWILLIAMS.COM</span></p>
