--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP)</p>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-        <p><span>PHARRELLWILLIAMS.COM</span></p>
+        <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         <img src="../images/columbia-logo.png" alt="Columbia logo">
