--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="../images/columbia-logo.png" alt="Columbia logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <p><span>COLUMBIARECORDS.COM</span></p>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
